Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5418

compile fix for code using readline

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.7.0
    • Lustre 2.6.0
    • 3
    • 15069

      Newer versions of readline have removed (or hidden) CPPFunction, leading to the following compilation issue:

      util/parser.c: In function 'init_input':
      util/parser.c:308:45: error: 'CPPFunction' undeclared (first use in this function)
               rl_attempted_completion_function = (CPPFunction *)command_completion; 
      

      The affects Ubuntu 14.04.

            cliffw Cliff White (Inactive)
            fzago Frank Zago (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: