LU-5418 libcfs: only define noop_*_fn when readline is used

This fixes a compilation break introduced by change 7629b7.
When readline devel is not found on the system,
the code using readline is not used, including
noop_int_fn() and noop_void_fn().
This generates a couple warning about these
function being unused, which breaks the build.

Change-Id: I75b292cd6ad3b04fdd03adcf1886011e23620e8b
Signed-off-by: frank zago <fzago@cray.com>
Reviewed-on: http://review.whamcloud.com/11252
Tested-by: Jenkins
Reviewed-by: Bob Glossman <bob.glossman@intel.com>
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Reviewed-by: James Simmons <uja.ornl@gmail.com>
Reviewed-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Reviewed-by: Patrick Farrell <paf@cray.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>